Bug 296647 - Muon Software Center crashed
Summary: Muon Software Center crashed
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-23 23:17 UTC by Musaab
Modified: 2012-03-23 23:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Musaab 2012-03-23 23:17:16 UTC
Application: muon-installer (1.3.0 "Daring Dalek")
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.2.0-20-generic x86_64
Distribution: Ubuntu precise (development branch)

-- Information about the crash:
- What I was doing when the application crashed:  I installed kopete because for some reason after the distro was installed, kopete was missing despite being in the menu.  So after I installed it, the Muon Software Center crashed.

-- Backtrace:
Application: Muon Software Center (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f66f8093780 (LWP 4305))]

Thread 4 (Thread 0x7f66e1cac700 (LWP 4306)):
#0  0x00007f66f46a1b03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f66ef3ca0e6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f66ef3ca214 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f66f5aefa96 in QEventDispatcherGlib::processEvents (this=0x7f66dc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f66f5abf2f2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f66f5abf547 in QEventLoop::exec (this=0x7f66e1cabdd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f66f59bef97 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f66f5a9f06f in QInotifyFileSystemWatcherEngine::run (this=0x23b6760) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f66f59c1fbb in QThreadPrivate::start (arg=0x23b6760) at thread/qthread_unix.cpp:298
#9  0x00007f66efa86e9a in start_thread (arg=0x7f66e1cac700) at pthread_create.c:308
#10 0x00007f66f46ad4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f66d9f2a700 (LWP 4594)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f66f1840212 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f66f1840249 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f66efa86e9a in start_thread (arg=0x7f66d9f2a700) at pthread_create.c:308
#4  0x00007f66f46ad4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f66d3fff700 (LWP 4596)):
#0  __pthread_mutex_lock (mutex=0x7f66c8000a60) at pthread_mutex_lock.c:56
#1  0x00007f66ef405891 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f66ef3c9819 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f66ef3ca00b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f66ef3ca214 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f66f5aefa96 in QEventDispatcherGlib::processEvents (this=0x7f66c80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f66f5abf2f2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f66f5abf547 in QEventLoop::exec (this=0x7f66d3ffee00, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f66f59bef97 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007f66f59c1fbb in QThreadPrivate::start (arg=0x7f66cc003360) at thread/qthread_unix.cpp:298
#10 0x00007f66efa86e9a in start_thread (arg=0x7f66d3fff700) at pthread_create.c:308
#11 0x00007f66f46ad4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f66f8093780 (LWP 4305)):
[KCrash Handler]
#6  value (akey=..., this=0x8) at /usr/include/qt4/QtCore/qhash.h:609
#7  Application::getField (this=0x0, field=...) at /build/buildd/muon-1.3.0/installer/Application.cpp:338
#8  0x000000000041ef5d in Application::untranslatedName (this=0x0) at /build/buildd/muon-1.3.0/installer/Application.cpp:68
#9  0x000000000041f0f0 in Application::name (this=<optimized out>) at /build/buildd/muon-1.3.0/installer/Application.cpp:63
#10 0x0000000000441d0d in ReviewsBackend::reviewsFetched (this=0x2400ba0, job=0x3d50dc0) at /build/buildd/muon-1.3.0/installer/ReviewsBackend/ReviewsBackend.cpp:225
#11 0x000000000041e3a4 in ReviewsBackend::qt_static_metacall (_o=0x2400ba0, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/muon-1.3.0/obj-x86_64-linux-gnu/installer/moc_ReviewsBackend.cpp:58
#12 0x00007f66f5ad48f1 in QMetaObject::activate (sender=0x3d50dc0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffec70390) at kernel/qobject.cpp:3547
#13 0x00007f66f5f4a822 in KJob::result (this=<optimized out>, _t1=0x3d50dc0) at ./kjob.moc:208
#14 0x00007f66f5f4a860 in KJob::emitResult (this=0x3d50dc0) at ../../kdecore/jobs/kjob.cpp:318
#15 0x00007f66f78bc4ca in KIO::FileCopyJob::slotResult (this=0x3d50dc0, job=0x3d361a0) at ../../kio/kio/job.cpp:2449
#16 0x00007f66f5ad48f1 in QMetaObject::activate (sender=0x3d361a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffec70540) at kernel/qobject.cpp:3547
#17 0x00007f66f5f4a822 in KJob::result (this=<optimized out>, _t1=0x3d361a0) at ./kjob.moc:208
#18 0x00007f66f5f4a860 in KJob::emitResult (this=0x3d361a0) at ../../kdecore/jobs/kjob.cpp:318
#19 0x00007f66f78b4b84 in KIO::SimpleJob::slotFinished (this=0x3d361a0) at ../../kio/kio/job.cpp:494
#20 0x00007f66f78bc71d in KIO::TransferJob::slotFinished (this=0x3d361a0) at ../../kio/kio/job.cpp:1081
#21 0x00007f66f5ad48f1 in QMetaObject::activate (sender=0x2402360, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#22 0x00007f66f7963171 in KIO::SlaveInterface::dispatch (this=<optimized out>, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:172
#23 0x00007f66f795ff25 in KIO::SlaveInterface::dispatch (this=<optimized out>) at ../../kio/kio/slaveinterface.cpp:88
#24 0x00007f66f79531ae in KIO::Slave::gotInput (this=0x2402360) at ../../kio/kio/slave.cpp:344
#25 0x00007f66f5ad48f1 in QMetaObject::activate (sender=0x253b720, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#26 0x00007f66f7885887 in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#27 KIO::ConnectionPrivate::dequeue (this=0x253bdc0) at ../../kio/kio/connection.cpp:71
#28 0x00007f66f5ad9ab6 in QObject::event (this=0x253b720, e=<optimized out>) at kernel/qobject.cpp:1195
#29 0x00007f66f4e436b4 in notify_helper (e=0x3ef19b0, receiver=0x253b720, this=0x21d48c0) at kernel/qapplication.cpp:4555
#30 QApplicationPrivate::notify_helper (this=0x21d48c0, receiver=0x253b720, e=0x3ef19b0) at kernel/qapplication.cpp:4527
#31 0x00007f66f4e48533 in QApplication::notify (this=0x7ffffec71790, receiver=0x253b720, e=0x3ef19b0) at kernel/qapplication.cpp:4416
#32 0x00007f66f6520906 in KApplication::notify (this=0x7ffffec71790, receiver=0x253b720, event=0x3ef19b0) at ../../kdeui/kernel/kapplication.cpp:311
#33 0x00007f66f5ac050c in QCoreApplication::notifyInternal (this=0x7ffffec71790, receiver=0x253b720, event=0x3ef19b0) at kernel/qcoreapplication.cpp:876
#34 0x00007f66f5ac42da in sendEvent (event=0x3ef19b0, receiver=0x253b720) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#35 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x21a97a0) at kernel/qcoreapplication.cpp:1500
#36 0x00007f66f5aef603 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#37 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#38 0x00007f66ef3c9d8a in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007f66ef3ca150 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007f66ef3ca214 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f66f5aefa2f in QEventDispatcherGlib::processEvents (this=0x21ab080, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#42 0x00007f66f4eebb1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#43 0x00007f66f5abf2f2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#44 0x00007f66f5abf547 in QEventLoop::exec (this=0x7ffffec71720, flags=...) at kernel/qeventloop.cpp:204
#45 0x00007f66f5ac45d7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#46 0x000000000041dc97 in main (argc=5, argv=0x7ffffec71a08) at /build/buildd/muon-1.3.0/installer/main.cpp:61

This bug may be a duplicate of or related to bug 283728.

Possible duplicates by query: bug 296047, bug 294370, bug 294327, bug 293679, bug 291761.

Reported using DrKonqi
Comment 1 Jonathan Thomas 2012-03-23 23:35:53 UTC
Git commit ebb4c77d5aba0a1f4aa929c4c595099a253fedb4 by Jonathan Thomas.
Committed on 24/03/2012 at 00:31.
Pushed by jmthomas into branch '1.3'.

Don't crash if the jobs cache has been cleared before a review fetch completes.
(More generically, check for a null ptr before using it)
FIXED-IN:1.3.1

M  +3    -0    installer/ReviewsBackend/ReviewsBackend.cpp

http://commits.kde.org/muon/ebb4c77d5aba0a1f4aa929c4c595099a253fedb4
Comment 2 Jonathan Thomas 2012-03-23 23:35:54 UTC
Git commit 95c987006177dd4cf0d4bb01f8e9fefcc236d73b by Jonathan Thomas.
Committed on 24/03/2012 at 00:31.
Pushed by jmthomas into branch 'master'.

Don't crash if the jobs cache has been cleared before a review fetch completes.
(More generically, check for a null ptr before using it)
FIXED-IN:1.3.1

M  +3    -0    libmuon/ReviewsBackend/ReviewsBackend.cpp

http://commits.kde.org/muon/95c987006177dd4cf0d4bb01f8e9fefcc236d73b