Don't crash if the jobs cache has been cleared before a review fetch completes. (More generically, check for a null ptr before using it)

BUG:296647
FIXED-IN:1.3.1